# AStressfulMachine

./: .gitignore  CMakeLists.txt  Makefile  README.md  SYNTAX.md  cahier_des_charges.odt
data/: add  log  multiply
data/gamefiles/levels/add/: input  instructions  solution
data/gamefiles/levels/copy/: input  instructions
data/gamefiles/levels/multiply/: input  instructions  solution
data/gamefiles/levels/multiply/lib/: add  copy  subtract
data/gamefiles/levels/sort2/: input  instructions  solution
data/gamefiles/levels/subtract/: input  instructions
data/saves/: save.xml
data/saves/save_00/add/: 0  4
data/saves/save_00/copy/: 0
data/saves/save_00/multiply/: 0
data/saves/save_00/sort2/: 0
data/saves/save_00/subtract/: 0
doc/: doxyconfig
doc/html/: GameLevel_8h_source.html  GameSequence_8h_source.html  VirtualMachineProcedure_8h_source.html  VirtualMachine_8h_source.html  annotated.html  classGameLevel-members.html  classGameLevel.html  classGameSequence-members.html  classGameSequence.html  classVirtualMachine-members.html  classVirtualMachine.html  classVirtualMachineProcedure-members.html  classVirtualMachineProcedure.html  classVirtualMachineProcedure__coll__graph.map  classVirtualMachineProcedure__coll__graph.md5  classVirtualMachineProcedure__inherit__graph.map  classVirtualMachineProcedure__inherit__graph.md5  classVirtualMachine__coll__graph.map  classVirtualMachine__coll__graph.md5  classVirtualMachine__inherit__graph.map  classVirtualMachine__inherit__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen.css  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  menudata.js  utilities_8h_source.html
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  classes_0.js  classes_1.js  functions_0.js  functions_2.js  functions_5.js  functions_6.js  searchdata.js
doc/latex/: annotated.tex  classGameLevel.tex  classGameSequence.tex  classVirtualMachine.tex  classVirtualMachineProcedure.tex  classVirtualMachineProcedure__coll__graph.md5  classVirtualMachineProcedure__inherit__graph.md5  classVirtualMachine__coll__graph.md5  classVirtualMachine__inherit__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  hierarchy.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
meta/: cahier_des_charges.odt
src/: Field.cpp  Field.h  Game.cpp  Game.h  GameGUI.cpp  GameGUI.h  GameLevel.cpp  GameLevel.h  GameSequence.cpp  GameSequence.h  GameTUI.cpp  GameTUI.h  Menu.cpp  Menu.h  NcursesMenu.cpp  NcursesMenu.h  NcursesTypingField.cpp  NcursesTypingField.h  NcursesWindow.cpp  NcursesWindow.h  SavePicker.cpp  SavePicker.h  String2D.cpp  VirtualMachine.cpp  VirtualMachine.h  VirtualMachineException.cpp  VirtualMachineException.h  VirtualMachineProcedure.cpp  VirtualMachineProcedure.h  VirtualMachineTUI.cpp  VirtualMachineTUI.h  Window.cpp  Window.h  a_stressful_machine_tui.cpp  file_utilities.cpp  file_utilities.h  interpreter.cpp  main.cpp  ncurses++.cpp  ncurses++.h  (+10 more)
src/GUI/: GUIAdventureMode.cpp  GUIAdventureMode.h  GUIFileEdit.cpp  GUIFileEdit.h  GUIGameplay.cpp  GUIGameplay.h  GUIMainMenu.cpp  GUIMainMenu.h  GUIPickLevel.cpp  GUIPickLevel.h  GUIPickSave.cpp  GUIPickSave.h  GUISandbox.cpp  GUISandbox.h  GUIWindow.cpp  GUIWindow.h  GUIWindowGameplay.cpp  GUIWindowGameplay.h  GUIWindowMainMenu.cpp  GUIWindowMainMenu.h  GameGUI.cpp  GameGUI.h  GuiPickLevel.cpp  GuiPickLevel.h
src/TUI/: GameTUI.cpp  GameTUI.h
src/file_utilities/: file_utilities.cpp  file_utilities.h
src/game_logic/: Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameSequence.cpp  GameSequence.h  SavePicker.cpp  SavePicker.h
src/mains/: a_stressful_machine_gui.cpp  a_stressful_machine_tui.cpp  interpreter.cpp  unit_test.cpp
src/ncursespp/: CursedStringStream.cpp  CursedStringStream.h  Field.cpp  Field.h  Menu.cpp  Menu.h  MessageStack.cpp  MessageStack.h  OCursedStream.cpp  OCursedStream.h  String2D.h  Window.cpp  Window.h  ncurses++.cpp  ncurses++.h
src/virtual_machine/: VirtualMachine.cpp  VirtualMachine.h  VirtualMachineException.cpp  VirtualMachineException.h  VirtualMachineProcedure.cpp  VirtualMachineProcedure.h
